--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,25 +15,64 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
-          theme: {
-            extend: {
-              colors: {
-                clifford: '#da373d',
-              }
+            theme: {
+                extend: {
+                    colors: {
+                        clifford: '#da373d',
+                    }
+                }
             }
-          }
         }
-      </script>
+    </script>
 </head>
+
 <body>
-    <header>
+    <main class="max-w-screen-xl mx-auto px-16 lg:px-16">
+        <!-- header section -->
+        <header class="lg:flex pt-10 mb-20">
+            <!-- text content -->
+            <div>
+                <h1 class="text-5xl md:text-7xl font-extrabold">It's good <br>
+                    tea time at The <br>
+                    Tea House
+                </h1>
+                <br>
+                <p class="text-gray-500 w-3/4">
+                    Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.
+                </p>
+                <br>
+                <button
+                    class="bg-gradient-to-r from-orange-500 to-red-500 px-5 py-3 rounded-lg text-white font-bold flex gap-3 justify-centerm items-center">
+                    Explore More <i class="fa-solid fa-arrow-right text-2xl -rotate-45"></i>
+                </button>
+            </div>
+            <!-- image content -->
+            <div class="relative">
+                <!-- image -->
+                <div>
+                    <img src="images/banner.png" alt="">
+                </div>
+                <!-- card -->
+                 <div class="absolute flex items-center px-2 py-2 md:px-8 lg:py-4 bg-white shadow-lg top-28 md:top-96 md:left-28 lg:left-24 rounded-lg">
+                    <!-- icon -->
+                    <div><i class="fa-solid fa-star text-amber-500 text-4xl"></i></div>
+                    <!-- text -->
+                     <div class="ml-3">
+                        <h2 class="lg:text-2xl font-extrabold">5.00</h2>
+                        <p class="text-gray-500">Trust Pilot Ratings</p>
+                     </div>
+                 </div>
+            </div>
+        </header>
 
-    </header>
-    <main>
-
+        <!-- featured product section -->
+         <section class="">
+            
+         </section>
     </main>
     <footer>
 
     </footer>
 </body>
+
 </html>
