added featured product section

--- a/index.html
+++ b/index.html
@@ -53,22 +53,63 @@
                     <img src="images/banner.png" alt="">
                 </div>
                 <!-- card -->
-                 <div class="absolute flex items-center px-2 py-2 md:px-8 lg:py-4 bg-white shadow-lg top-28 md:top-96 md:left-28 lg:left-24 rounded-lg">
+                <div
+                    class="absolute flex items-center px-2 py-2 md:px-8 lg:py-4 bg-white shadow-lg bottom-4 left-24 md:top-96 md:left-28 lg:left-24 rounded-lg">
                     <!-- icon -->
                     <div><i class="fa-solid fa-star text-amber-500 text-4xl"></i></div>
                     <!-- text -->
-                     <div class="ml-3">
+                    <div class="ml-3">
                         <h2 class="lg:text-2xl font-extrabold">5.00</h2>
                         <p class="text-gray-500">Trust Pilot Ratings</p>
-                     </div>
-                 </div>
+                    </div>
+                </div>
             </div>
         </header>
 
         <!-- featured product section -->
-         <section class="">
-            
-         </section>
+        <section class="py-8 lg:py-24">
+            <!-- title -->
+            <div class="text-center mb-8">
+                <h1 class="font-bold text-3xl md:text-4xl lg:text-5xl mb-5">Our Featured Products</h1>
+                <p class="text-gray-500 max-w-xl md:max-w-2xl lg:max-w-4xl mx-auto">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour, or randomised words which don't look even slightly
+                    believable.
+                </p>
+            </div>
+            <!-- product cards -->
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+                <!-- card -->
+                <div class="bg-gradient-to-b from-[#F4F4F4] to-[#FFF] p-8 rounded-lg  overflow-hidden">
+                    <img class="mx-auto" src="images/tea-1.png" alt="">
+                    <div class="text-center mt-7">
+                        <h3 class="font-extrabold text-2xl ">Milk Tea</h3>
+                        <p class="text-gray-500 mt-2">Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+                <div class="bg-gradient-to-b from-[#F4F4F4] to-[#FFF] p-8 rounded-lg  overflow-hidden">
+                    <img class="mx-auto" src="images/tea-2.png" alt="">
+                    <div class="text-center mt-7">
+                        <h3 class="font-extrabold text-2xl ">Black Tea</h3>
+                        <p class="text-gray-500 mt-2">Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+                <div class="bg-gradient-to-b from-[#F4F4F4] to-[#FFF] p-8 rounded-lg  overflow-hidden">
+                    <img class="mx-auto" src="images/tea-3.png" alt="">
+                    <div class="text-center mt-7">
+                        <h3 class="font-extrabold text-2xl ">Lemon Tea</h3>
+                        <p class="text-gray-500 mt-2">Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+                <div class="bg-gradient-to-b from-[#F4F4F4] to-[#FFF] p-8 rounded-lg  overflow-hidden">
+                    <img class="mx-auto" src="images/tea-4.png" alt="">
+                    <div class="text-center mt-7">
+                        <h3 class="font-extrabold text-2xl ">Green Tea</h3>
+                        <p class="text-gray-500 mt-2">Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
