--- a/index.html
+++ b/index.html
@@ -110,6 +110,34 @@
                 </div>
             </div>
         </section>
+
+        <!-- great tea section -->
+         <section class="mb-20 mt-20">
+            <div class="grid gird-cols-1 lg:grid-cols-2 items-center gap-8 lg:gap-2">
+                <!-- image content -->
+                <div class="grid grid-cols-2 grid-rows-3 gap-4 lg:w-5/6 ">
+                    <div class="h-38 bg-gradient-to-r from-[#FF0000] to-[#FF8938] rounded-xl opacity-10"></div>
+                    <div class="row-span-2 bg-[#E6A623]/10 rounded-xl">
+                        <img class="mx-auto my-5" src="images/fresh-1.png" alt="">
+                    </div>
+                    <div class="row-span-2 bg-[#577639]/10 rounded-xl">
+                        <img class="mx-auto my-5" src="images/fresh-2.png" alt="">
+                    </div>
+                    <div class="h-38 bg-gradient-to-r  from-stone-200 to-stone-100 rounded-xl"></div>
+                </div>
+                <!-- Text content -->
+                <div>
+                    <h1 class="text-4xl font-extrabold mb-5">Great Tea, Freshly <br>Presented</h1>
+                    <p class="text-gray-500">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+                    <br>
+                    <h3 class="font-extrabold text-xl mb-5">Unique Taste</h3>
+                    <p class="text-gray-500 ">A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+                    <br>
+                    <h3 class="font-extrabold text-xl mb-5">Premium Quality</h3>
+                    <p class="text-gray-500">Premium Quality that makes tea more elegant and more durable when you use it.</p>
+                </div>
+            </div>
+         </section>
     </main>
     <footer>
 
