--- a/index.html
+++ b/index.html
@@ -138,6 +138,59 @@
                 </div>
             </div>
          </section>
+
+         <!-- Reviews section -->
+          <section class="mb-24">
+            <div class=" bg-gradient-to-r from-[#FF8938] to-[#FF0000] rounded-xl px-7 md:px-16  py-10 md:py-0 grid grid-cols-1 md:grid-cols-2 text-white">
+                 <!-- Text -->
+                  <div class="flex justify-center items-center">
+                    <div class="w-5/6">
+                        <h1 class="text-5xl font-bold mb-5">Meet Our Super Clients</h1>
+                        <p class="mb-5">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+                        <button class="bg-white text-orange-700 rounded-lg px-3 py-2 mb-5 font-bold">Show All</button>
+                      </div>
+                  </div>
+
+                  <!-- Review cards -->
+                   <div class="relative py-24 px-4">
+                    <!-- middle card -->
+                    <div class="absolute z-10 top-52 lg:top-56">
+                        <div class="relative h-56 w-full md:w-3/4 bg-white text-black rounded-xl flex justify-center items-center ">
+                            <div class="absolute -top-5 -left-5 bg-white rounded-full">
+                                <img class="p-1" src="images/client.png" alt="">
+                            </div>
+                            <div class="px-5">
+                                <p class="text-gray-500 mb-5">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                                <h1 class="text-xl font-bold">Ilham Yuda</h1>
+                                <small class="text-gray-500 ">Businessman</small>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- top card -->
+                    <div class="relative left-10 md:left-32 h-56 w-full md:w-3/4 bg-white text-black rounded-xl flex justify-center items-center opacity-60">
+                        <div class="absolute -top-5 -left-5 bg-white rounded-full">
+                            <img class="p-1" src="images/client.png" alt="">
+                        </div>
+                        <div class="px-5">
+                            <p class="text-gray-500 mb-5">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                            <h1 class="text-xl font-bold">Ilham Yuda</h1>
+                            <small class="text-gray-500 ">Businessman</small>
+                        </div>
+                    </div>
+                    <!-- Bottom card -->
+                    <div class="relative left-10 md:left-32 top-10 h-56 w-full md:w-3/4 bg-white text-black rounded-xl flex justify-center items-center opacity-60 mb-5">
+                        <div class="absolute -top-5 -left-5 bg-white rounded-full">
+                            <img class="p-1" src="images/client.png" alt="">
+                        </div>
+                        <div class="px-5">
+                            <p class="text-gray-500 mb-5">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                            <h1 class="text-xl font-bold">Ilham Yuda</h1>
+                            <small class="text-gray-500 ">Businessman</small>
+                        </div>
+                    </div>
+                   </div>
+            </div>
+          </section>
     </main>
     <footer>
 
