--- a/index.html
+++ b/index.html
@@ -19,14 +19,17 @@
                 extend: {
                     colors: {
                         clifford: '#da373d',
-                    }
+                    },
+                    fontFamily: {
+                        manrope: ['Manrope', 'serif'],
+                    },
                 }
             }
         }
     </script>
 </head>
 
-<body>
+<body class="font-manrope">
     <main class="max-w-screen-xl mx-auto px-16 lg:px-16">
         <!-- header section -->
         <header class="lg:flex pt-10 mb-20">
@@ -141,10 +144,10 @@
 
          <!-- Reviews section -->
           <section class="mb-24">
-            <div class=" bg-gradient-to-r from-[#FF8938] to-[#FF0000] rounded-xl px-7 md:px-16  py-10 md:py-0 grid grid-cols-1 md:grid-cols-2 text-white">
+            <div class="bg-gradient-to-r from-[#FF8938] to-[#FF0000] rounded-xl px-7 md:px-16  py-10 md:py-0 grid grid-cols-1 md:grid-cols-2 text-white ">
                  <!-- Text -->
                   <div class="flex justify-center items-center">
-                    <div class="w-5/6">
+                    <div class="w-5/6 bg-[url('images/bg_cup.png')] bg-no-repeat ">
                         <h1 class="text-5xl font-bold mb-5">Meet Our Super Clients</h1>
                         <p class="mb-5">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
                         <button class="bg-white text-orange-700 rounded-lg px-3 py-2 mb-5 font-bold">Show All</button>
@@ -192,8 +195,64 @@
             </div>
           </section>
     </main>
-    <footer>
-
+    <footer class="bg-gradient-to-r from-[#FF8938]/10 to-[#FF0000]/10 py-10 md:py-20 px-4 md:px-20 text-gray-600">
+        <div class="w-9/12 mx-auto">
+            <!-- logo -->
+            <div class="flex justify-between">
+                <img src="images/cup.png" alt="">
+                <div class="flex items-center gap-5">
+                    <p>Ready to get strated?</p>
+                    <button class="bg-gradient-to-r from-orange-500 to-red-500 px-5 py-3 rounded-lg text-white font-bold">Get Started</button>
+                </div>
+            </div>
+            <!-- links -->
+             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 mt-5 lg:mt-24">
+                <!-- First column -->
+                <div>
+                    <h3 class="font-semibold text-xl text-black mb-5">Quick Links</h3>
+                    <ul class="space-y-4">
+                        <li><a href="">Home</a></li>
+                        <li><a href="">About Us</a></li>
+                        <li><a href="">Insurance</a></li>
+                        <li><a href="">Privacy Policy</a></li>
+                    </ul>
+                </div>
+                <!-- Second column -->
+                <div>
+                    <h3 class="font-semibold text-xl text-black mb-5">Our Service</h3>
+                    <ul class="space-y-4">
+                        <li><a href="">Life Insurance</a></li>
+                        <li><a href="">Car Insurance</a></li>
+                        <li><a href="">Health Insurance</a></li>
+                        <li><a href="">House Insurance</a></li>
+                    </ul>
+                </div>
+                <!-- Third column -->
+                <div>
+                    <h3 class="font-semibold text-xl text-black mb-5">Help</h3>
+                    <ul class="space-y-4">
+                        <li><a href="">FAQs</a></li>
+                        <li><a href="">Contact Us</a></li>
+                    </ul>
+                </div>
+                <!-- Fourth column -->
+                 <div>
+                    <h3 class="font-semibold text-2xl mb-5 md:mb-10">Subscribe to our newsletter</h3>
+                    <div>
+                        <input placeholder="Email address" type="email" class="bg-transparent border-b-2 border-[#494949] py-4">
+                        <button class="bg-gradient-to-r from-[#FF8938] to-[#FF0000] w-8 h-8 rounded-full text-white"><i class="fa-solid fa-chevron-right"></i></button>
+                    </div>
+                    <div class="mt-5 md:mt-10 space-x-5">
+                        <button><i class="fa-brands fa-facebook"></i></button>
+                        <button><i class="fa-brands fa-square-instagram"></i></button>
+                        <button><i class="fa-brands fa-square-twitter"></i></button>
+                    </div>
+                 </div>
+             </div>
+             <div class="text-center mt-10">
+                <small>© 2027 UIDesign.to - All rights reserved.</small>
+             </div>
+        </div>
     </footer>
 </body>
 
