--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <section class="py-8 lg:py-24">
             <!-- title -->
             <div class="text-center mb-8">
-                <h1 class="font-bold text-3xl md:text-4xl lg:text-5xl mb-5">Our Featured Products</h1>
+                <h1 class="font-extrabold text-3xl md:text-4xl lg:text-5xl mb-5">Our Featured Products</h1>
                 <p class="text-gray-500 max-w-xl md:max-w-2xl lg:max-w-4xl mx-auto">
                     There are many variations of passages of Lorem Ipsum available, but the majority have suffered
                     alteration in some form, by injected humour, or randomised words which don't look even slightly
@@ -194,6 +194,40 @@
                    </div>
             </div>
           </section>
+
+          <!-- News and Events section -->
+           <section class="mb-20">
+            <div class="text-center">
+                <h1 class="font-extrabold text-3xl md:text-4xl lg:text-5xl mb-5">News & Events</h1>
+                <p class="w-4/5 mx-auto text-gray-500">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+            </div>
+            <div class="grid grid-cols-1 md:grid-cols-3 mt-12 gap-6">
+                <div class="space-y-2 p-5 border-[#D2D2D2] border-2 rounded-xl">
+                    <img src="images/news-1.png" alt="">
+                    <p class="text-gray-500">Feb 05, 2027</p>
+                    <h3 class="font-extrabold text-xl">Collecting 8 points for <br>
+                         discount</h3>
+                    <p class="text-gray-500">There are many variations of passages of Lorem Ipsum available.</p>
+                    <p class="font-bold" >Learn More</p>
+                </div>
+                <div class="space-y-2 p-5 border-[#D2D2D2] border-2 rounded-xl">
+                    <img src="images/news-2.png" alt="">
+                    <p class="text-gray-500">Feb 05, 2027</p>
+                    <h3 class="font-extrabold text-xl">Collecting 8 points for <br>
+                         discount</h3>
+                    <p class="text-gray-500">There are many variations of passages of Lorem Ipsum available.</p>
+                    <p class="font-bold" >Learn More</p>
+                </div>
+                <div class="space-y-2 p-5 border-[#D2D2D2] border-2 rounded-xl">
+                    <img src="images/news-3.png" alt="">
+                    <p class="text-gray-500">Feb 05, 2027</p>
+                    <h3 class="font-extrabold text-xl">Collecting 8 points for <br>
+                         discount</h3>
+                    <p class="text-gray-500">There are many variations of passages of Lorem Ipsum available.</p>
+                    <p class="font-bold" >Learn More</p>
+                </div>
+            </div>
+           </section>
     </main>
     <footer class="bg-gradient-to-r from-[#FF8938]/10 to-[#FF0000]/10 py-10 md:py-20 px-4 md:px-20 text-gray-600">
         <div class="w-9/12 mx-auto">
