fixed some tiny problems

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body class="font-manrope">
     <main class="max-w-screen-xl mx-auto px-16 lg:px-16">
         <!-- header section -->
-        <header class="lg:flex pt-10 mb-20">
+        <header class="lg:flex pt-10 mb-24">
             <!-- text content -->
             <div>
                 <h1 class="text-5xl md:text-7xl font-extrabold">It's good <br>
@@ -70,7 +70,7 @@
         </header>
 
         <!-- featured product section -->
-        <section class="py-8 lg:py-24">
+        <section class="py-8 mb-24">
             <!-- title -->
             <div class="text-center mb-8">
                 <h1 class="font-extrabold text-3xl md:text-4xl lg:text-5xl mb-5">Our Featured Products</h1>
@@ -115,7 +115,7 @@
         </section>
 
         <!-- great tea section -->
-         <section class="mb-20 mt-20">
+         <section class="mb-24">
             <div class="grid gird-cols-1 lg:grid-cols-2 items-center gap-8 lg:gap-2">
                 <!-- image content -->
                 <div class="grid grid-cols-2 grid-rows-3 gap-4 lg:w-5/6 ">
