fixed some problem for medium and small device

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </head>
 
 <body class="font-manrope">
-    <main class="max-w-screen-xl mx-auto px-16 lg:px-16">
+    <main class="max-w-screen-xl mx-auto px-4 md:px-8 lg:px-16">
         <!-- header section -->
         <header class="lg:flex pt-10 mb-24">
             <!-- text content -->
@@ -57,11 +57,11 @@
                 </div>
                 <!-- card -->
                 <div
-                    class="absolute flex items-center px-2 py-2 md:px-8 lg:py-12 bg-white shadow-lg bottom-4 left-24 md:top-96 md:left-28 lg:left-24 rounded-lg">
+                    class="absolute flex items-center px-2 py-2 md:px-8 md:py-4 lg:py-6 bg-white shadow-lg  md:top-96 md:left-28 lg:left-24 rounded-lg">
                     <!-- icon -->
-                    <div><i class="fa-solid fa-star text-amber-500 text-4xl"></i></div>
+                    <div><i class="fa-solid fa-star text-amber-500 text-2xl md:text-3xl lg:text-4xl"></i></div>
                     <!-- text -->
-                    <div class="ml-3">
+                    <div class="ml-2 md:ml-3">
                         <h2 class="lg:text-2xl font-extrabold">5.00</h2>
                         <p class="text-gray-500">Trust Pilot Ratings</p>
                     </div>
@@ -144,7 +144,7 @@
 
          <!-- Reviews section -->
           <section class="mb-24">
-            <div class="bg-gradient-to-r from-[#FF8938] to-[#FF0000] rounded-xl px-7 md:px-16  py-10 md:py-0 grid grid-cols-1 md:grid-cols-2 text-white ">
+            <div class="bg-gradient-to-r from-[#FF8938] to-[#FF0000] rounded-xl px-7 lg:px-16 py-10 md:py-0 grid grid-cols-1 lg:grid-cols-2 text-white ">
                  <!-- Text -->
                   <div class="flex justify-center items-center">
                     <div class="w-5/6 bg-[url('images/bg_cup.png')] bg-no-repeat ">
@@ -230,17 +230,17 @@
            </section>
     </main>
     <footer class="bg-gradient-to-r from-[#FF8938]/10 to-[#FF0000]/10 py-10 md:py-20 px-4 md:px-20 text-gray-600">
-        <div class="w-9/12 mx-auto">
+        <div class="md:w-9/12 mx-auto">
             <!-- logo -->
-            <div class="flex justify-between">
-                <img src="images/cup.png" alt="">
+            <div class="flex gap-4 md:justify-between flex-col md:flex-row">
+                <div><img src="images/cup.png" alt=""></div>
                 <div class="flex items-center gap-5">
-                    <p>Ready to get strated?</p>
-                    <button class="bg-gradient-to-r from-orange-500 to-red-500 px-5 py-3 rounded-lg text-white font-bold">Get Started</button>
+                    <p>Ready to get started?</p>
+                    <button class="bg-gradient-to-r from-orange-500 to-red-500 px-2 py-2 md:px-5 md:py-3 rounded-lg text-white font-bold">Get Started</button>
                 </div>
             </div>
             <!-- links -->
-             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 mt-5 lg:mt-24">
+             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 mt-5 lg:mt-24 gap-5">
                 <!-- First column -->
                 <div>
                     <h3 class="font-semibold text-xl text-black mb-5">Quick Links</h3>
